--- a/gptdev.ipynb
+++ b/gptdev.ipynb
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
     "\n",
     "# (B, T, 16) k.transpose(-2, -1) -> (B, 16, T)\n",
     "# (B, T, 16) @ (B, 16, T) -> (B, T, T)\n",
-    "weights = q @ k.transpose(-2, -1)\n",
+    "weights = q @ k.transpose(-2, -1) / (head_size ** 0.5)\n",
     "\n",
     "tril = torch.tril(torch.ones(T, T))\n",
     "# weights = torch.zeros((T, T))\n",
