add doc and bigram v-3

--- a/gptdev.ipynb
+++ b/gptdev.ipynb
@@ -521,6 +521,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<center>\n",
+    "    <img src=\"./doc/scaled-dot-attention.png\" alt=\"Texto alternativo\" style=\"width:50%;\">\n",
+    "</center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SCALED DOT SELF ATTENTION\n",
+    "\n",
+    "\n",
     "$$\n",
     "\\text{Attention}(Q, K, V) = \\text{softmax}\\left(\\frac{QK^T}{\\sqrt{d_k}}\\right)V\n",
     "$$\n"
@@ -635,6 +647,15 @@
     "- In an \"encoder\" attention block just delete the single line that does masking with `tril`, allowing all tokens to communicate. This block here is called a \"decoder\" attention block because it has triangular masking, and is usually used in autoregressive settings, like language modeling.\n",
     "- \"self-attention\" just means that the keys and values are produced from the same source as queries. In \"cross-attention\", the queries still get produced from x, but the keys and values come from some other, external source (e.g. an encoder module)\n",
     "- \"Scaled\" attention additional divides `wei` by 1/sqrt(head_size). This makes it so when input Q,K are unit variance, wei will be unit variance too and Softmax will stay diffuse and not saturate too much."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center>\n",
+    "    <img src=\"./doc/multi-head-attention.png\" alt=\"Texto alternativo\" style=\"width:50%;\">\n",
+    "</center>\n"
    ]
   },
   {
